# Domain-Knowledge-QA---Selise-Group

./: app.py  main.py  pyproject.toml
src/configs/: config.yaml
src/core/: critic.py  generation.py  indexing.py  load_docs.py  model_emb.py  pipeline.py  retrieval.py
src/pydentic_models/: rag_model.py
